# badrudin-ai-os

./: .env.example  .gitignore  ACCESS_CONTROL.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: accountable.py  agents.py  ai_provider.py  attachments.py  auth.py  communications.py  core.py  crm.py  daily_report_ai.py  dashboards.py  deps.py  design.py  digest.py  equipment.py  estimates.py  evidence.py  executive_doc.py  field_report.py  finance.py  health.py  inbox.py  integration.py  inventory.py  kpi.py  normative.py  quality.py  (+10 more)
backend/scripts/: demo_scenario.py
backend/tests/: README.md  conftest.py  test_abac.py  test_access_control_matrix.py  test_access_matrix.py  test_accountable_api.py  test_agents_api.py  test_ai_provider.py  test_attachments.py  test_audit.py  test_audit_hardening.py  test_audit_protection.py  test_auth.py  test_authority_periods.py  test_broadcasts.py  test_channel_adapters.py  test_communications.py  test_core_e2e.py  test_crm_api.py  test_cross_org_isolation.py  test_daily_report_ai.py  test_dashboards.py  test_db_base.py  test_design_api.py  test_design_models.py  test_design_service.py  test_detail_notfound_matrix.py  test_digest_api.py  test_document_protection.py  test_equipment_api.py  test_errors.py  test_estimate_api.py  test_estimate_models.py  test_estimate_service.py  test_evidence_gate.py  test_executive_doc_api.py  test_field_report_api.py  test_finance_api.py  test_health.py  test_idempotency.py  (+48 more)
(+332 files in other folders)
