[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "badrudin-backend"
version = "0.1.0"
description = "Badrudin AI OS backend (FastAPI). Каркас Этапа 1 (T-1.A4)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "bcrypt>=4.1",
    "pyjwt>=2.8",
    "email-validator>=2.1",
    "pyotp>=2.9",
    "webauthn>=2.5",
    "minio>=7.2",
    "celery[redis]>=5.3",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "integration: тесты, требующие внешних сервисов (БД/Redis/MinIO)",
]
